--- a/client/src/components/SearchBar/SearchBar.css
+++ b/client/src/components/SearchBar/SearchBar.css
@@ -28,6 +28,7 @@
 }
 .form .button{
     border:none;
+    outline: none;
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px;
 }
